adds recherche_commune endpoint.
