# server/api.yaml
@@ -79,6 +79,19 @@ paths:
             description: L'usager a pu étre authentifié·e
           '401':
             description: L'usager n'est pas dans la liste validée par l'INSEE
+  /recherche_commune:
+    post:
+      summary: Renvoie une liste des premières communes qui contiennent la chaîne de caractères recherchée.
+      operationId: server.handlers.SearchCommune.recherche_commune
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/recherche_commune'
+      responses:
+          '201':
+            description: Résultat d'une recherche de commune
   /dotations:
     post:
       summary: Demande le calcul de l'impact des articles de loi sur les dotations aux collectivités.
@@ -274,3 +287,8 @@ components:
       properties:
         dotations:
           type: object
+    recherche_commune:
+      type: object
+      properties:
+        extraitNomCommune:
+          type: string
